--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,7 @@
     },
     "main": "index.js",
     "dependencies": {
+        "cors": "^2.8.5",
         "express": "^4.17.3",
         "firebase": "^9.6.7",
         "firebase-admin": "^10.0.2",
